--- a/src/app/modules/problems/pages/problem/problem.component.html
+++ b/src/app/modules/problems/pages/problem/problem.component.html
@@ -123,6 +123,14 @@
 
         <div class="col-lg-3 col-md-12 col-sm-12">
           <problem-sidebar [problem]="problem"></problem-sidebar>
+
+          @if (isAuthenticated) {
+            <problem-submit-card
+              [availableLanguages]="problem.availableLanguages"
+              [submitUrl]="'problems/' + problem.id + '/submit/'"
+              (submitted)="onSubmit()"
+            />
+          }
         </div>
 
       </div>
